filtragem de input, correções de escrita

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
     <div class="bloco">
         <header>
-            <h1>Bin2Dec</h1>
+            <h1>Binário para Decimal</h1>
         </header>
         <div class="bloco-sm">
-            <label for="input" id="bin">Binary</label>
-            <input type="text" name="numero" id="numero" maxlength="8" placeholder="Max. 8 digits" />
+            <label for="input" id="bin">Binário</label>
+            <input type="text" name="numero" id="numero" maxlength="8" placeholder="Max. 8 dígitos" />
         </div>
         <div class="bloco-sm">
             <label for="input">Decimal</label>
-            <input type="number" name="decimal" id="decimal" disabled />
+            <input type="number" name="decimal" id="decimal" readonly />
         </div>
         <div class="bloco-sm">
-            <button type="button" class="btn btn-warning" id="bin2Dec">Convert</button>
+            <button type="button" class="btn btn-warning converter" id="bin2Dec">Converter</button>
         </div>
     </div>
     <footer></footer>
